# dirty_comments_and_clean_plates

./: .env  .gitignore  .sh  .zshrc  LICENSE  README.md  eda.ipynb  eda.py  get_restaurants.py  phila_data.ipynb  pyproject.toml
chat_gpt/: base_prompt.txt  fake_reviews_gpt-3.5-turbo-16k-0613_0_shots.csv  few_shot_prompt.txt  generate_reviews.ipynb  splits.py  zero_shot_prompt.txt
chat_gpt/gpt_reviews/: fake_reviews_gpt-3.5-turbo-16k-0613_3_shots.csv  fake_reviews_gpt-3.5-turbo-16k-0613_3_shots_attempt1.csv  fake_reviews_gpt-3.5-turbo-16k-0613_3_shots_jacks.csv  fake_reviews_gpt-4-1106-preview_3_shots.csv  new_fake_reviews_gpt-3.5-turbo-16k-0613_0_shots.csv  new_fake_reviews_gpt-3.5-turbo-16k-0613_3_shots.csv  new_fake_reviews_gpt-4-1106-preview_3_shots.csv
clean/: dataloader.ipynb  tokenize_and_embed.py
collect/: __main__.py  datatypes.py  explore.ipynb  get_inspections.py  get_restaurants.py  get_restaurants_by_point.py  identify_points.py  utils.py  yelp_scrape.py
collect/chicago/: __main__.py  datatypes.py  get_inspections.py  identify_points.py  yelp_scrape.py
collect/philadelphia/: merge.py
data/: points.json  restaurants_test.json  test3.json  test_points.json  test_restaurant_pull.json  yelp_cleaning.ipynb
data/chicago/: points.json  test_restaurant_pull.json
data/fake_reviews/: test.csv  val.csv
data/scraped/: coordinates_41.75_-87.6.jsonl
eda/: eda.ipynb  eda_fake_reviews.ipynb  graphs_plots.ipynb  yelp_data_eda.ipynb
models/: dataloaders.py  fake_detection.ipynb  fake_reviews_bert.ipynb  fake_reviews_rnn.ipynb  features.py  fine_tune_bert.ipynb  fine_tune_bert_all.ipynb  fine_tune_bert_hf.ipynb  fine_tune_bert_text.ipynb  helpers.py  model_framework.ipynb  model_framework.py  rnn.ipynb  rrn.ipynb  run_models.ipynb  shared_models.py  xgboost.ipynb
notebooks/: bert_metrics.ipynb  phila_data.ipynb
sentiment_analysis/: sentiment_analysis.ipynb
(+32 files in other folders)
