[tool.poetry]
name = "how-the-bear-got-a-c"
version = "0.1.0"
description = ""
authors = ["claireboyd <claire.k.boyd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
pathlib = "^1.0.1"
argparse = "^1.4.0"
yelpapi = "^2.5.1"
pprintpp = "^0.4.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
lxml = "^5.1.0"
geopandas = "^0.14.3"
geodatasets = "^2023.12.0"
matplotlib = "^3.8.3"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
polars = "^0.20.9"
pydantic = "^2.6.1"
jsonlines = "^4.0.0"
cssselect = "^1.2.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
